[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "twilioapp"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
twilio = "^6.38"
credentials = "^1.1"
[tool.poetry.dev-dependencies]
